tests/paczka2/big_fuzzy/72476225.err
Error in line 5: dyl8DDjTS A189 32,1
Error in line 8: A301 A29 143,23
Error in line 14: 5MeWCO4FTCG A29 8,3
Error in line 24: 1CVuK A301 66,7
Error in line 27: KFRFuKi A29 69,5
Error in line 35: KFRFuKi A455 85,7
Error in line 28: 1CVuK A29 6,0
Error in line 53: 1CVuK A189 86,7
Error in line 54: 1CVuK A301 72,2
Error in line 63: dyl8DDjTS A301 79,5
Error in line 81: KFRFuKi A455 -2,9
Error in line 72: bf1 A301 68,1
Error in line 99: A301 A29 74,58
Error in line 74: dyl8DDjTS A455 65,0
Error in line 100: dyl8DDjTS A29 55,8
Error in line 80: KFRFuKi A455 36,4
Error in line 106: A301 A29 156,3
Error in line 116: A301 A455 78,7
Error in line 124: A301 A189 15,4
Error in line 141: tL8k A455 1,4
Error in line 145: KFRFuKi A29 61,3
Error in line 162: 1CVuK A29 65,8
Error in line 168: bf1 A455 18,4
Error in line 186: 5MeWCO4FTCG A301 40,0
Error in line 192: 1CVuK A455 12,2
Error in line 194: A301 A455 6,1
Error in line 200: tL8k A301 58,5
Error in line 202: A301 A301 82,8
Error in line 203: tL8k A189 35,6
Error in line 212: 1CVuK A29 9>,4
Error in line 211: 1CVuK A189 33,9
Error in line 207: 5MeWCO4FTCG A189 49,2
Error in line 216: dyl8DDjTS A189 52,5
Error in line 215: 1CVuK A29 12,4
Error in line 222: 1CVuK A189 57,6
Error in line 220: 5MeWCO4FTCG A301 49,0
Error in line 236: bf1 A189 99,8
